--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section id="games-section">
     <div class="inner">
       <header>
-		<img src="assets/images/gamelist.jpg" alt="" style="width: 100px;">
+		<img src="assets/images/games.jpg" alt="" style="width: 100px;">
       </header>
       <div class="games-list">
         <div class="game-item">
